--- a/src/code/panelRegistroCursos.form
+++ b/src/code/panelRegistroCursos.form
@@ -54,6 +54,12 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="inputNombreC">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Ingresar nombre"/>
+          </Properties>
           <Events>
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="inputNombreCMousePressed"/>
           </Events>
@@ -113,6 +119,12 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="inputModalidadC">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Ingresar modalidad"/>
+          </Properties>
           <Events>
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="inputModalidadCMousePressed"/>
           </Events>
@@ -136,6 +148,12 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="inputCantidadC">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Ingresar cantidad disponible"/>
+          </Properties>
           <Events>
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="inputCantidadCMousePressed"/>
           </Events>
