--- a/src/code/panelRegistroCursos.form
+++ b/src/code/panelRegistroCursos.form
@@ -139,11 +139,11 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="SansSerif" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cantidad"/>
+            <Property name="text" type="java.lang.String" value="Cantidad disponible"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="380" y="60" width="60" height="20"/>
+              <AbsoluteConstraints x="380" y="60" width="130" height="20"/>
             </Constraint>
           </Constraints>
         </Component>
