--- a/src/code/AndyPanel.form
+++ b/src/code/AndyPanel.form
@@ -63,7 +63,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/images/saitama.jpg"/>
+              <Image iconType="3" name="/images/Dragon ball.jpg"/>
             </Property>
           </Properties>
           <Constraints>
@@ -304,7 +304,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="40" y="280" width="40" height="-1"/>
+              <AbsoluteConstraints x="40" y="280" width="90" height="20"/>
             </Constraint>
           </Constraints>
         </Component>
