--- a/src/code/InfoAnd.form
+++ b/src/code/InfoAnd.form
@@ -424,7 +424,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="SansSerif" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Chiquitiboom A La Bin Bon Ba"/>
+            <Property name="text" type="java.lang.String" value="Chiquitiboom A La Bim Bom Ba"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
